--- a/441-clients/public/index.html
+++ b/441-clients/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Schedule Up</title>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
