--- a/441-clients/public/index.html
+++ b/441-clients/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/eclipse.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/calendar-gradient.svg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -22,8 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Schedule Up</title>
+    <title>ScheduleUp</title>
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
   </head>
   <body>
